Fix vulnerability report not showing for manually-added vulnerabilities

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -43791,6 +43791,9 @@ msgstr ""
 msgid "ciReport|Manage licenses"
 msgstr ""
 
+msgid "ciReport|Manually Added"
+msgstr ""
+
 msgid "ciReport|New"
 msgstr ""
 
