Add page size selector to vulnerability report
Changelog: added
MR: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/83604
EE: true

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -33603,6 +33603,9 @@ msgstr ""
 msgid "SecurityReports|Severity"
 msgstr ""
 
+msgid "SecurityReports|Show %{pageSize} items"
+msgstr ""
+
 msgid "SecurityReports|Sometimes a scanner can't determine a finding's severity. Those findings may still be a potential source of risk though. Please review these manually."
 msgstr ""
 
