--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -41852,7 +41852,7 @@ msgstr ""
 msgid "Vulnerability|Image"
 msgstr ""
 
-msgid "Vulnerability|Information related how the vulnerability was discovered and its impact to the system."
+msgid "Vulnerability|Information related to how the vulnerability was discovered and its impact on the system."
 msgstr ""
 
 msgid "Vulnerability|Learn more about this vulnerability and the best way to resolve it."
