Add links to vulnerability bulk status updates error message
For each vulnerability that failed to update, the ID is now a link
which redirects to its detail page.

Changelog: added
EE: true

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -41272,6 +41272,9 @@ msgstr ""
 msgid "SecurityReports|Failed to get security report information. Please reload the page or try again later."
 msgstr ""
 
+msgid "SecurityReports|Failed updating vulnerabilities with the following IDs: %{ids}"
+msgstr ""
+
 msgid "SecurityReports|Has issue"
 msgstr ""
 
