Add admin_vulnerability to custom roles
Changelog: added
EE: true

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -27962,6 +27962,9 @@ msgstr ""
 msgid "MemberInviteEmail|Invitation to join the %{project_or_group} %{project_or_group_name}"
 msgstr ""
 
+msgid "MemberRole|%{requirement} has to be enabled in order to enable %{permission}."
+msgstr ""
+
 msgid "MemberRole|%{role} - custom"
 msgstr ""
 
